Expanded test code